Move common properties to Project class, remove maven options that already present on build agent